--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
-    "next": "11.1.2",
+    "next": "11.1.3-canary.15",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -31,6 +31,6 @@
   },
   "devDependencies": {
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
+    "eslint-config-next": "11.1.3-canary.15"
   }
 }
